# supabase-recon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  script.py
.github/actions/lint/: action.yml
.github/actions/release/: action.yml
.github/actions/security/: action.yml
.github/actions/sync-tags/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml
.github/workflows/templates/: release-announcement.yaml
docs/: CHANGELOG.md  arquitetura.md  seguranca-dependencias.md
scripts/: history_rewrite.py
scripts/operations/: __init__.py  clean_workspace.py
src/: main.py
src/app/application/dto/: analysis_report.py
src/app/application/use_cases/: analyze_application.py  test_api_reliability.py
src/app/domain/: exceptions.py
src/app/domain/models/: asset.py  endpoint.py  supabase_config.py
src/app/domain/services/: bundle_parser.py  swagger_builder.py
src/app/domain/validation/: config_validator.py
src/app/infrastructure/loaders/: asset_downloader.py
src/app/infrastructure/network/: http_client.py
src/app/infrastructure/persistence/: file_repository.py
src/app/interfaces/cli/: arguments.py  terminal_ui.py
src/recon/: __init__.py  wiring.py
src/recon/application/: __init__.py  ports.py  recon_orchestrator.py
src/recon/domain/: __init__.py  bundle_analysis.py  constants.py  exceptions.py  models.py  probe_summary.py  swagger_factory.py
src/recon/infrastructure/: __init__.py  http_urllib.py  log_level_format.py  logging_config.py  probe_client.py  yaml_writer.py
src/recon/presentation/: __init__.py  cli.py  human_report.py
tests/: __init__.py  conftest.py  readme.md
tests/unit/: __init__.py  test_conftest_hooks.py  test_run_entry.py  test_wiring.py
tests/unit/application/: test_analyze_application.py  test_api_reliability.py  test_recon_orchestrator.py
tests/unit/domain/: test_bundle_analysis.py  test_constants.py  test_probe_summary.py  test_swagger_factory.py
tests/unit/domain/models/: test_asset.py  test_endpoint.py  test_supabase_config.py
tests/unit/domain/services/: test_bundle_parser.py  test_swagger_builder.py
tests/unit/domain/validation/: test_config_validator.py
tests/unit/infrastructure/: test_http_urllib.py  test_log_level_format.py  test_probe_client.py  test_yaml_writer.py
tests/unit/infrastructure/loaders/: test_asset_downloader.py
tests/unit/infrastructure/network/: test_http_client.py
tests/unit/infrastructure/persistence/: test_file_repository.py
tests/unit/presentation/: test_cli.py  test_human_report.py
tools/: commitlint.config.mjs  releaserc.json
