[project]
name = "chupabase-analyzer"
version = "0.1.0"
description = "Ferramenta de análise de bundles Supabase/Lovable seguindo princípios de DDD."
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "data",
    "output",
    "__pycache__",
    "build",
    "dist",
    "script.py",
    "run.py",
]

[tool.ruff.lint]
select = [
    "E",    # erros de estilo (pycodestyle)
    "W",    # avisos de estilo (pycodestyle)
    "F",    # pyflakes
    "I",    # isort (organização de imports)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "S",    # flake8-bandit (segurança)
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (codigo comentado)
    "PL",   # pylint
]
ignore = [
    "E501",     # linha longa (formatador controla)
    "D203",     # linha em branco antes de docstring de classe
    "D213",     # resumo da docstring multi-linha na segunda linha
    "ANN204",   # sem anotacao de retorno em __init__
    "S101",     # uso de assert (aceito em checagens internas)
    "PLR0913",  # muitos argumentos na definicao da funcao
    "PLR2004",  # valor magico usado em comparacao
    "COM812",   # virgula final ausente (conflita com ruff format)
    "ISC001",   # concatenacao implicita de string (conflita com ruff format)
    "D1",       # ignorar avisos de docstrings faltantes (interrogate ja monitora)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
"app/interfaces/cli.py" = ["T201"]
"scripts/operations/clean_workspace.py" = ["T201"]
"tests/**/*.py" = ["PLR2004", "ARG001", "ARG002", "ARG005", "S101"]
"app/infrastructure/http_client.py" = ["S113"] # Requests sem timeout (ajustar depois)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q --strict-markers"
markers = [
    "unit: testes unitarios isolados (sem I/O externo)",
    "application: testes da camada application",
    "domain: testes da camada domain",
    "infrastructure: testes da camada infrastructure",
    "interfaces: testes da camada de entrada (CLI)",
    "integration: suite de integração",
    "e2e: suite end-to-end",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 100
exclude = ["tests", ".venv", "venv", "build", "dist", ".git", "app/domain/entities.py", "script.py", "run.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", ".git"]